<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SignUpActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dakyum" />

    <TextView
        android:id="@+id/tv_supname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Name"
        android:fontFamily="@font/bmjua"
        app:layout_constraintStart_toStartOf="@+id/edtv_supname"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/edtv_supname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/putyourname"
        android:fontFamily="@font/bmjua"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_supname" />

    <TextView
        android:id="@+id/tv_supid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="ID"
        android:fontFamily="@font/bmjua"
        app:layout_constraintStart_toStartOf="@+id/edtv_supname"
        app:layout_constraintTop_toBottomOf="@+id/edtv_supname" />

    <EditText
        android:id="@+id/edtv_supid"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/putyourid"
        android:inputType="text"
        android:fontFamily="@font/bmjua"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="327dp"
        app:layout_constraintStart_toStartOf="@+id/tv_supid"
        app:layout_constraintTop_toBottomOf="@+id/tv_supid"
        />


    <TextView
        android:id="@+id/tv_supcheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/doublecheck"
        android:fontFamily="@font/bmjua"
        app:layout_constraintBottom_toBottomOf="@+id/edtv_supid"
        app:layout_constraintStart_toEndOf="@+id/edtv_supid"
        app:layout_constraintTop_toTopOf="@+id/edtv_supid" />
    <!--    <Button-->
    <!--        android:id="@+id/bnt_supidcheck"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="20dp"-->
    <!--        android:text="중복확인"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/edtv_supid"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/edtv_supid"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/edtv_supid" />-->

    <TextView
        android:id="@+id/tv_suppw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Password"
        android:fontFamily="@font/bmjua"
        app:layout_constraintStart_toStartOf="@+id/edtv_supid"
        app:layout_constraintTop_toBottomOf="@+id/edtv_supid" />

    <EditText
        android:id="@+id/edtv_suppw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:textSize="12dp"
        android:hint="@string/putyourpw"
        android:inputType="textPassword"
        android:maxLines="2"
        android:scrollbars="none"
        android:fontFamily="@font/bmjua"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_suppw" />

    <Button
        android:id="@+id/bnt_supcancel"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Cancel"
        android:fontFamily="@font/bmjua"
        app:layout_constraintEnd_toStartOf="@+id/bnt_supdone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtv_suppw" />

    <Button
        android:id="@+id/bnt_supdone"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="Done"
        android:fontFamily="@font/bmjua"
        app:layout_constraintBottom_toBottomOf="@+id/bnt_supcancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bnt_supcancel" />


</androidx.constraintlayout.widget.ConstraintLayout>