<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailPageActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        >




        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detail_Layout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:baselineAligned="false"
            android:background="@color/detail_background"
            >
            <Button
                android:id="@+id/detail_Undo_Btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="Detail"
                android:textSize="20dp"
                app:layout_constraintStart_toEndOf="@+id/detail_Undo_Btn"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/bmjua"
                />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/detail_img"
                android:layout_margin="32dp"
                android:layout_width="150dp"
                android:layout_height="150dp"

                android:layout_gravity="center"
                android:background="@android:color/transparent"
                app:civ_border_overlay="true"
                app:civ_border_color="#000000"
                app:civ_border_width="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                />


<!--            <ImageView-->
<!--                android:id="@+id/Detail_Img"-->
<!--                android:layout_width="150dp"-->
<!--                android:layout_height="150dp"-->
<!--                android:layout_marginStart="30dp"-->
<!--                android:layout_marginTop="50dp"-->
<!--                android:baseline="100dp"-->

<!--                app:srcCompat="@drawable/kwanghee" />-->

            <TextView
                android:id="@+id/detail_IDText"
                android:text="@string/Detail_IdText"
                android:textSize="15sp"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="120dp"
                android:fontFamily="@font/bmjua"
                app:layout_constraintStart_toEndOf="@id/detail_img"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                />
            <TextView
                android:id="@+id/detail_NameText"
                android:text="@string/detail_Name"
                android:textSize="15sp"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="120dp"
                android:fontFamily="@font/bmjua"
                app:layout_constraintStart_toEndOf="@id/detail_img"
                app:layout_constraintTop_toBottomOf="@id/detail_IDText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                />
            <TextView
                android:id="@+id/detail_MBTIText"
                android:text="@string/detail_MBTI"
                android:textSize="15sp"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="80dp"
                android:fontFamily="@font/bmjua"
                app:layout_constraintStart_toEndOf="@id/detail_img"
                app:layout_constraintTop_toBottomOf="@id/detail_NameText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                />
            <TextView
                android:id="@+id/detail_StatusText"
                android:text="@string/detail_Status"
                android:textSize="15sp"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/bmjua"

                app:layout_constraintStart_toEndOf="@id/detail_img"
                app:layout_constraintTop_toBottomOf="@id/detail_MBTIText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                />

            <TextView
                android:id="@+id/detail_IDInputText"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginStart="100dp"
                android:layout_marginBottom="120dp"
                android:fontFamily="@font/bmjua"
                app:layout_constraintStart_toEndOf="@id/detail_img"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                />
            <TextView
                android:id="@+id/detail_NameInputText"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginStart="100dp"
                android:layout_marginBottom="120dp"
                android:fontFamily="@font/bmjua"
                app:layout_constraintStart_toEndOf="@id/detail_img"
                app:layout_constraintTop_toBottomOf="@id/detail_IDText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                />
            <TextView
                android:id="@+id/detail_MBTIInputText"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginStart="100dp"
                android:layout_marginBottom="80dp"
                android:fontFamily="@font/bmjua"
                app:layout_constraintStart_toEndOf="@id/detail_img"
                app:layout_constraintTop_toBottomOf="@id/detail_NameText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                />
            <TextView
                android:id="@+id/detail_StatusInputText"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginStart="100dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/bmjua"

                app:layout_constraintStart_toEndOf="@id/detail_img"
                app:layout_constraintTop_toBottomOf="@id/detail_MBTIText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                />


        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.appcompat.widget.LinearLayoutCompat>

    <ListView
        android:id="@+id/detail_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutCompat"></ListView>


    <!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/linearLayoutCompat">-->


<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:orientation="vertical">-->

<!--            <androidx.constraintlayout.utils.widget.ImageFilterView-->
<!--                android:id="@+id/detail_mainImgView1"-->
<!--                android:layout_width="300dp"-->
<!--                android:layout_height="100dp"-->
<!--                android:layout_margin="50dp"-->
<!--                android:background="@drawable/feed"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent" />-->



<!--            <TextView-->
<!--                android:layout_width="300dp"-->
<!--                android:layout_height="100dp"-->
<!--                android:layout_marginStart="50dp"-->
<!--                android:layout_marginTop="15dp"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/detail_mainImgView" />-->

<!--            <androidx.constraintlayout.utils.widget.ImageFilterView-->
<!--                android:id="@+id/detail_mainImgView2"-->
<!--                android:layout_width="300dp"-->
<!--                android:layout_height="100dp"-->
<!--                android:layout_margin="50dp"-->
<!--                android:background="@drawable/feed"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent" />-->


<!--        </LinearLayout>-->
<!--    </ScrollView>-->

</androidx.constraintlayout.widget.ConstraintLayout>